# Spyder-Code-Agent

./: LICENSE  README.md  pyproject.toml  setup.py
spyder_code_agent/: container.py  plugin.py
